--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "bs4>=0.0.2",
     "httpx>=0.28.1",
     "langgraph>=0.3.18",
+    "markdownify>=1.1.0",
     "openai>=1.67.0",
     "pydantic>=2.10.6",
     "pytest>=8.3.5",
