--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pydantic>=2.10.6",
     "pytest>=8.3.5",
     "python-dotenv>=1.0.1",
+    "rich>=13.9.4",
     "wrapworks>=1.0.8",
 ]
 
