--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "bs4>=0.0.2",
     "httpx>=0.28.1",
+    "langchain-openai>=0.3.9",
     "langgraph>=0.3.18",
     "markdownify>=1.1.0",
     "openai>=1.67.0",
